@@ -1,3 +1,8 @@
+2010-12-31  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-methods): Add recursive options to "scpc" and
+	"scpx".
+
 2010-12-30  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-default-method-alist, tramp-default-user-alist)
